[tool.poetry]
name = "dfmt"
version = "1.0.0"
description = ""
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>"]
readme = "README.rst"
license = "BSD-3-Clause"
repository = "https://github.com/dmerejkowsky/dfmt"


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"

[tool.poetry.scripts]
dfmt = "dfmt:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

